[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-manager"
version = "0.1.0"
description = "A comprehensive Python package for managing vLLM API server lifecycle with logging, process management, and multi-server support"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "vllm", "llm", "inference", "server", "manager",
    "llama", "ai", "machine-learning", "gpu", "cuda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AiKiAi-stack/vllm_startup"
Documentation = "https://github.com/AiKiAi-stack/vllm_startup#readme"
Repository = "https://github.com/AiKiAi-stack/vllm_startup.git"
Issues = "https://github.com/AiKiAi-stack/vllm_startup/issues"
Changelog = "https://github.com/AiKiAi-stack/vllm_startup/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vllm_manager*"]

[tool.setuptools.package-data]
vllm_manager = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=vllm_manager --cov-report=term-missing"
